# frdim

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  notes.txt  plan.txt
dependencies/hds/: Cargo.toml
dependencies/hds/src/: conics.rs  lib.rs  tesseracts.rs  util.rs
dependencies/hds/src/conics/: hypercone.rs  hyperconic.rs  hyperplane.rs
dependencies/hds/src/tesseracts/: tesseract.rs
dependencies/hds/src/util/: conic_surfaces.rs  helpers.rs
dependencies/hds/tests/: main.rs
dependencies/jive/: Cargo.toml
dependencies/jive/src/: jives.rs  jivin_2d.rs  lib.rs  pipeline.rs  screendata.rs
dependencies/jive/src/jives/: jivemodel.rs
dependencies/jive/src/jivin_2d/: pipeline_deux.rs
dependencies/jive/src/shaders/: fun.rs
dependencies/jive/tests/: main.rs
dependencies/rola/: Cargo.toml
dependencies/rola/src/: lib.rs  matrix.rs  vector.rs
dependencies/rola/src/matrix/: mat3x3.rs  mat4x4.rs
dependencies/rola/src/vector/: vec3f.rs  vec4f.rs
dependencies/rola/tests/: main.rs
examples/: 3d_conics.rs  aizawa.rs  aligning_conics.rs  cone_slices.rs  conic_demo.rs  conic_sections.rs  hyperconic_sections.rs  hypershapes.rs  jive_integration.rs  surface_meshes.rs
src/: fourshapes.rs  la.rs  lib.rs  main.rs  mesh.rs  meshes.rs  meshrender.rs  nmain.rs  render.rs  threedim.rs
src/fourshapes/: conics.rs  hyperconics.rs  hypersphere.rs
src/la/: mat3x3.rs  mat4x4.rs  matrix.rs  vec3f.rs
src/meshes/: mesh.rs  surfacemesh.rs  triangle.rs
src/meshrender/: mesh.rs  triangle.rs
src/rendering/: render.rs
tests/: main  main.rs
